--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -72,8 +72,10 @@
 
 .socialLinks {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 1rem;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .socialLink {
